...
            TourColumn(
                listTour = listTour,
                navigateToDetail = navigateToDetail
            )
        } else {
            EmptyList(
                Warning = "Tidak ada Daftar Favorite"
            )
        }
    }
}
